@@ -1,3 +1,10 @@
+Songs to VK (0.3.1)
+
+	* Добавлена замена амперсанда ('&') в статусе на "and"
+	* Небольшая правка одного комментария
+	
+-Konstantin Zyryanov <post.herzog@gmail.com> Вс. 29 марта 2015 01:49:15 YEKT 
+
 Songs to VK (0.3)
 
 	* Добавлена замена амперсанда в названиях песен на "and"
